# ike-scripts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MAINTAINERS.md  Makefile  OWNERS.md  README.md  build.rs  compose.override.yml  compose.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  migrations.yml
docs/releases/: v0.0.0.md
migrations/: 20240924115629_init_schema.down.sql  20240924115629_init_schema.up.sql
scripts/: license.sh
src/: lib.rs  main.rs  state.rs
src/stores/: chunk.rs  document.rs  document_meta.rs  document_tag.rs  download.rs  embedding.rs  mod.rs  request.rs  source.rs  stores.rs  tag.rs
src/transformer/: mod.rs
